[workspace]

members = [
    "ch01_getting_started",
    "ch02_guessing_game",
    "ch03_syntax_and_semantics",
    "ch98_rust_macro_01",
    "ch98_rust_macro_02",
    "ch98_macro_export_use",
    "ch98_little_book_of_macro",
    "ch99_rust_learning",
]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



