[package]
name = "ch98_little_book_of_macro"
version = "0.1.0"
authors = ["yingliufengpeng <2906631584@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ch98_macro_export_use = { path="../ch98_macro_export_use" }